Change from one piece of IG media to all of user's media

--- a/InstagramAPIExplorer/InstagramAPIExplorer/Pages/InstagramMedia/Index.cshtml
+++ b/InstagramAPIExplorer/InstagramAPIExplorer/Pages/InstagramMedia/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿@page
 @model InstagramAPIExplorer.Pages.InstagramMedia.IndexModel
 @{
-    string imagePath = Model.Post.Url;
+    //string imagePath = Model.Post.Url;
 }
 
 
-<img src="@imagePath" />
